<resources>
    <string name="app_name">Jarvis</string>
    <string name="title">Title</string>
    <string name="add_applet">Add Applet</string>

    <string name="battery">Battery</string>
    <string name="headphones">HeadPhones</string>
    <string name="location">Location</string>
    <string name="applet_on">ON</string>
    <string name="applet_off">OFF</string>
    <string name="notification_checkbox_text">Receive Notification when applet runs</string>
    <string name="applet_finish">Finish</string>
    <string name="battery_drops_to_15">Battery drops to 15%</string>
    <string name="device_plugged_in">Device Plugged in</string>
    <string name="battery_drops_to_15_desc">BATTERY DROPS TO 15%</string>
    <string name="device_plugged_desc">DEVICE PLUGGED</string>
    <string name="device_unplugged">Device Unplugged</string>
    <string name="device_unplugged_desc">DEVICE UNPLUGGED</string>
    <string name="applet_title">Applet Title</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="turn_bluetooth_on">Turn Bluetooth On</string>
    <string name="turn_bluetooth_on_desc">TURN BLUETOOTH ON</string>
    <string name="turn_bluetooth_off">Turn Bluetooth Off</string>
    <string name="turn_bluetooth_off_desc">TURN BLUETOOTH OFF</string>
    <string name="headphone_plugged">Headphone Plugged</string>
    <string name="headphones_plugged_desc">HEADPHONES PLUGGED</string>
    <string name="headphones_unplugged">Headphones Unplugged</string>
    <string name="headphones_unplugged_desc">HEADPHONES UNPLUGGED</string>
    <string name="applet_create_hint">Click on condition to add the situation. Once the situation is added click on action to add respective action for the situation</string>
    <string name="if_statement">if</string>
    <string name="condition">(Condition)</string>
    <string name="open_braces">{</string>
    <string name="action">(Action)</string>
    <string name="close_braces">}</string>
    <string name="wifi">WiFi</string>
    <string name="turn_wifi_on">Turn WiFi On</string>
    <string name="turn_wifi_on_desc">TURN WIFI ON</string>
    <string name="turn_wifi_off">Turn WiFi Off</string>
    <string name="turn_wifi_off_desc">TURN WIFI OFF</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
