<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/wifi"
        android:drawableLeft="@drawable/ic_wifi"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="#BEBEBE"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#f54"
        android:layout_gravity="center"
        android:text="@string/turn_wifi_on"
        android:contentDescription="@string/turn_wifi_on_desc"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:onClick="onActionClick"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#f54"
        android:layout_gravity="center"
        android:text="@string/turn_wifi_off"
        android:contentDescription="@string/turn_wifi_off_desc"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="onActionClick"/>

</LinearLayout>